--- a/client/src/components/UIVerseCss/ExplorePageButton.css
+++ b/client/src/components/UIVerseCss/ExplorePageButton.css
@@ -1,4 +1,4 @@
-button {
+.explorebutton {
     color: white;
     background-color: #10B981;
     --ring-color: #6EE7B7;
@@ -17,15 +17,15 @@ button {
     border: none;
   }
   
-  button:hover {
+  .explorebutton:hover {
     background-color: #059669;
   }
   
-  button:focus {
+  .explorebutton:focus {
     box-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   }
   
-  button svg {
+  .explorebutton svg {
     display: inline;
     width: 1.3rem;
     height: 1.3rem;
